tests/rosetta/out/Java/accumulator-factory.error
javac error: exit status 1
/tmp/TestMochiToJavaaccumulator-factory4130882716/001/AccumulatorFactory.java:6: error: cannot find symbol
    static Object accumulator(any sum) {
                              ^
  symbol:   class any
  location: class AccumulatorFactory
/tmp/TestMochiToJavaaccumulator-factory4130882716/001/AccumulatorFactory.java:7: error: cannot find symbol
        List<any> store = Arrays.asList(sum);
             ^
  symbol:   class any
  location: class AccumulatorFactory
/tmp/TestMochiToJavaaccumulator-factory4130882716/001/AccumulatorFactory.java:8: error: incompatible types: Object is not a functional interface
        Object add = nv -> {
                     ^
/tmp/TestMochiToJavaaccumulator-factory4130882716/001/AccumulatorFactory.java:16: error: cannot find symbol
        x(5);
        ^
  symbol:   method x(int)
  location: class AccumulatorFactory
/tmp/TestMochiToJavaaccumulator-factory4130882716/001/AccumulatorFactory.java:18: error: cannot find symbol
        System.out.println(String.valueOf(x(2.300000)));
                                          ^
  symbol:   method x(double)
  location: class AccumulatorFactory
5 errors
